--- a/friends.html
+++ b/friends.html
@@ -22,26 +22,29 @@
       </div>
     </div>
 
-    <na class="nav">
+    <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="fas fa-user fa-lg"></i
+            ><i class="fas fa-user fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"><i class="far fa-comment fa-lg"></i></a>
+          <a class="nav__link" href="#">
+            <span class="nav__notification">1</span>
+            <i class="far fa-comment fa-2x"></i>
+          </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"><i class="fas fa-search fa-lg"></i></a>
+          <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="#"
-            ><i class="fas fa-ellipsis-h fa-lg"></i
+            ><i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
       </ul>
-    </na>
+    </nav>
 
     <script
       src="https://kit.fontawesome.com/68e42e0603.js"
